--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "bcrypt": "^6.0.0",
     "bootstrap": "^5.3.6",
     "cloudinary": "^1.41.3",
+    "compression": "^1.8.0",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "css": "^3.0.0",
-    "dotenv": "^16.4.7",
+    "dotenv": "^17.0.1",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.1",
     "express-session": "^1.18.1",
     "hbs": "^4.2.0",
+    "helmet": "^8.1.0",
     "mongoose": "^8.13.1",
     "morgan": "^1.10.0",
     "multer": "^2.0.1",
