--- a/package.json
+++ b/package.json
@@ -12,27 +12,30 @@
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
-    "bootstrap": "^5.3.6",
-    "cloudinary": "^1.41.3",
-    "compression": "^1.8.0",
+    "bootstrap": "^5.3.8",
+    "cloudinary": "^2.8.0",
+    "compression": "^1.8.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "css": "^3.0.0",
-    "dotenv": "^17.0.1",
-    "express": "^5.1.0",
-    "express-rate-limit": "^8.0.1",
+    "dotenv": "^17.2.3",
+    "express": "^5.2.1",
+    "express-rate-limit": "^8.2.1",
     "express-session": "^1.18.2",
     "hbs": "^4.2.0",
     "helmet": "^8.1.0",
-    "mongoose": "^8.13.1",
-    "morgan": "^1.10.0",
+    "mongoose": "^8.20.2",
+    "morgan": "^1.10.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "semver": "^7.7.1",
-    "serve-favicon": "^2.5.0"
+    "semver": "^7.7.3",
+    "serve-favicon": "^2.5.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.11"
+  },
+  "overrides": {
+    "body-parser": "^2.2.1"
   }
 }
